# kevin_scratch

./: README.md
artifact_store/: pyproject.toml
aws_stuff/: cost_estimator.py  costs.json  infratest_explore.py  pyproject.toml  show_ec2.py  show_ips.py  tag_instances.py  test_backend.py
decoder/: pyproject.toml
decoder/decoder/: data_out_0.xlsx  data_out_1.xlsx  data_out_10.xlsx  data_out_100.xlsx  data_out_101.xlsx  data_out_102.xlsx  data_out_103.xlsx  data_out_104.xlsx  data_out_105.xlsx  data_out_106.xlsx  data_out_108.xlsx  data_out_109.xlsx  data_out_11.xlsx  data_out_110.xlsx  data_out_111.xlsx  data_out_112.xlsx  data_out_113.xlsx  data_out_114.xlsx  data_out_115.xlsx  data_out_116.xlsx  data_out_117.xlsx  data_out_118.xlsx  data_out_119.xlsx  data_out_12.xlsx  data_out_121.xlsx  data_out_122.xlsx  data_out_123.xlsx  data_out_124.xlsx  data_out_125.xlsx  data_out_126.xlsx  data_out_127.xlsx  data_out_128.xlsx  data_out_129.xlsx  data_out_13.xlsx  data_out_130.xlsx  data_out_131.xlsx  data_out_132.xlsx  data_out_134.xlsx  data_out_135.xlsx  data_out_136.xlsx  (+112 more)
example_mono/project/: pyproject.toml
example_mono/project/project/: main.py
fastapi_poc/: Dockerfile  Dockerfile_detectron  frozen.txt  leak.py  nvidia_smi_inside.txt  nvidia_smi_outside.txt  pyproject.toml
fastapi_poc/base_images/detectron/: Dockerfile  build_and_push.sh  install-packages.sh
fastapi_poc/base_images/pytorch_1.9.0/: Dockerfile  build_and_push.sh
fastapi_poc/fastapi_poc/: Well_B2_Ch1_1um_detectron2-organoid-model_0.1.0.json  Well_B2_Xmm-0.012_Ymm-0.018_Ch1_1um.tiff  fastapi_detectron2.json  main.py
fastapi_poc/tests/: test_fastapi_poc.py
hera_example/: pyproject.toml
hera_example/hera_example/: 100.csv  artifact_example.py  filtered.csv  gpu_single_test.py  main.py  parse_csv.py  small_images.csv
jira_script/: j.sh  pyproject.toml  tags  typescript
jira_script/jira_script/: .main.py.swp  main.py
kubeview/: pyproject.toml
kubeview/kubeview/: .main.py.swp  main.py  nodes.txt
tf-mod-upload/: go.mod  go.sum
tf-mod-upload/cmd/tf-mod-upload/: main.go
