[tool.poetry]
name = "artifact-store"
version = "0.1.0"
description = ""
authors = ["Kevin Jamieson <kevin.jamieson@xilis.net>"]
readme = "README.md"
packages = [{include = "artifact_store"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.75.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
