[tool.poetry]
name = "aws-stuff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aws_stuff"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.18.49"
rich = "^10.11.0"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
